# pr3287d

./: .gitignore  Makefile.in  configure.ac  pr3287d.cbp
.github/workflows/: msys2.yml
pr3287-3.3/: configure  pr3287.man
pr3287-3.3/html/: ReleaseNotes.html  pr3287-man.html
src/: config.h.in
src/common/: charset.c  ctlr.c  pr3287.c  telnet.c  unicode.c  version.c.in
src/include/: config.h.in  globals.h  wsc.h
src/windows/: resources.rc.in  w3misc.c  ws.c
win/: build.conf  build.sh  bundle.common  bundle.cross  bundle.msys  ci-build.sh  pack.sh  pr3287.nsi.in  pr3287d.nsi.in
